feat: beta tui+rag-basic